# topgrade

./: CHANGELOG.md
.github/workflows/: ci.yml  dylint.yml
lints/short_flags/: Cargo.toml
lints/short_flags/src/: lib.rs
lints/short_flags/ui/: main.rs  main.stderr
src/: main.rs  runner.rs
src/steps/: generic.rs  zsh.rs
src/steps/os/: unix.rs
